--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "yaml": "^2.2.2",
     "yuka": "^0.7.8"
   },
   "devDependencies": {
