--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-three/cannon": "^6.5.2",
     "@react-three/drei": "^9.65.4",
     "@react-three/fiber": "^8.12.2",
+    "firebase": "^9.21.0",
     "framer-motion": "^10.12.4",
     "next": "^13.3.0",
     "react": "^18.2.0",
